--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ This repo gathers, categorizes, and compares knowledge on computation enclaves a
 <h2 class="display-6">What are Enclaves?</h2>
 
 <p>
-Since the early 2000's much research has been devoted to dealing with the problem a large, potentially untrustworthy software and hardware stack. While we normally expect supervisor and hypervisor software to isolate processes or VMs from each other, enclaves further expand this security model to also include isolation from some combination of either an OS, hypervisor, or even aspects of the physical hardware. Typically, enclaves are also coupled with an attestation mechanism, which allows a remote party to ensure an enclave is running securely.
+In the early 2000's much research began to be devoted to dealing with the problem of a large, potentially untrustworthy software and hardware stack. While we normally expect supervisor and hypervisor software to isolate processes or VMs from each other, enclaves further expand this security model to also include isolation from some combination of either an OS, hypervisor, or even aspects of the physical hardware. Typically, enclaves are also coupled with an attestation mechanism, which allows a remote party to ensure an enclave is running securely.
 </p>
 
 <p>
-Historically, the open source software community rightfully was extremely wary of the technologies used to build enclaves. The technologies were primarily aimed to be applied as a way to prevent users from modifiying their own computers and to enable DRM and has been criticized as antithetical to the philosophy of open source software. Today the technology has found a more useful place in the realms of privacy sensitive applications and safety-critical systems; the former is interesting because it inverts the model of DRM--instead of vendors not trusting end users with their devices, now it's the user's who do not trust the cloud vendor's servers.
+Historically, the open source software community rightfully was extremely wary of the technologies used to build enclaves. The technologies were primarily aimed to be applied as a way to prevent users from modifying their own computers and to enable DRM and has been criticized as antithetical to the philosophy of open source software. Today the technology has found a more useful place in the realms of privacy sensitive applications and safety-critical systems; the former is interesting because it inverts the model of DRM--instead of vendors not trusting end users with their devices, now it's the user's who do not trust the cloud vendor's servers.
 </p>
 
 
@@ -40,8 +40,7 @@ Historically, the open source software community rightfully was extremely wary o
     <th scope="col">Trusted Computing Base (TCB)</th>
     <th scope="col">VM Enclave Support</th>
     <th scope="col">Legacy App Support</th>
-    <th scope="col">Real Time Support</th>
-    <th scope="col">Availability</th>
+    <th scope="col">Availability Support</th>
     <th scope="col">Physical Defenses</th>
   </tr>
 </thead>
@@ -56,7 +55,6 @@ Historically, the open source software community rightfully was extremely wary o
     <td><i class="bi bi-check-lg"></i></td>
     <td><i class="bi bi-check-lg"></i></td>
     <td><i class="bi bi-check-lg"></i></td>
-    <td><i class="bi bi-check-lg"></i></td>
     <td><span class="badge text-bg-secondary">IMP</span></td>
   </tr>
   <tr>
@@ -68,7 +66,6 @@ Historically, the open source software community rightfully was extremely wary o
     <td></td>
     <td><i class="bi bi-check-lg"></i></td>
     <td><i class="bi bi-check-lg"></i></td>
-    <td><span class="badge text-bg-secondary">IMP</span></td>
     <td><span class="badge text-bg-secondary">IMP</span></td>
     <td><i class="bi bi-x-lg"></i></td>
   </tr>
@@ -90,7 +87,6 @@ Historically, the open source software community rightfully was extremely wary o
 			<li>Intel SGX SDK Libraries</li>
 		</ul>
 	</td>
-    <td><i class="bi bi-x-lg"></i></td>
     <td><i class="bi bi-x-lg"></i></td>
     <td><i class="bi bi-x-lg"></i></td>
     <td><i class="bi bi-x-lg"></i></td>
@@ -119,7 +115,6 @@ Historically, the open source software community rightfully was extremely wary o
     <td><i class="bi bi-check-lg"></i></td>
     <td><i class="bi bi-check-lg"></i></td>
     <td><i class="bi bi-x-lg"></i></td>
-    <td><i class="bi bi-x-lg"></i></td>
     <td><span class="badge text-bg-primary">ME</span></td>
   </tr>
   <tr>
@@ -131,7 +126,6 @@ Historically, the open source software community rightfully was extremely wary o
     <td></td>
     <td><i class="bi bi-check-lg"></i></td>
     <td><i class="bi bi-check-lg"></i></td>
-    <td><i class="bi bi-x-lg"></i></td>
     <td><i class="bi bi-x-lg"></i></td>
     <td><span class="badge text-bg-primary">ME</span></td>
   </tr>
@@ -155,7 +149,6 @@ Historically, the open source software community rightfully was extremely wary o
     <td><i class="bi bi-check-lg"></i></td>
     <td><i class="bi bi-check-lg"></i></td>
     <td><i class="bi bi-check-lg"></i></td>
-    <td><i class="bi bi-check-lg"></i></td>
     <td><span class="badge text-bg-secondary">IMP</span></td>
   </tr>
   <tr>
@@ -168,7 +161,6 @@ Historically, the open source software community rightfully was extremely wary o
     <td><i class="bi bi-check-lg"></i></td>
     <td><i class="bi bi-check-lg"></i></td>
     <td><i class="bi bi-question-lg"></i></td>
-    <td><i class="bi bi-question-lg"></i></td>
     <td><span class="badge text-bg-secondary">IMP</span></td>
   </tr>
   <tr>
@@ -178,7 +170,6 @@ Historically, the open source software community rightfully was extremely wary o
     <td></td>
     <td></td>
     <td></td>
-    <td><i class="bi bi-question-lg"></i></td>
     <td><i class="bi bi-question-lg"></i></td>
     <td><i class="bi bi-question-lg"></i></td>
     <td><i class="bi bi-question-lg"></i></td>
@@ -194,7 +185,6 @@ Historically, the open source software community rightfully was extremely wary o
     <td><i class="bi bi-check-lg"></i></td>
     <td><i class="bi bi-question-lg"></i></td>
     <td><i class="bi bi-question-lg"></i></td>
-    <td><i class="bi bi-question-lg"></i></td>
     <td><span class="badge text-bg-secondary">IMP</span></td>
   </tr>
   <tr>
@@ -207,8 +197,19 @@ Historically, the open source software community rightfully was extremely wary o
     <td><i class="bi bi-question-lg"></i></td>
     <td><i class="bi bi-check-lg"></i></td>
     <td><i class="bi bi-question-lg"></i></td>
+    <td><i class="bi bi-x-lg"></i></td>
+  </tr>
+  <tr>
+    <td>Fully Homomorphic Encryption</td>
+    <td>*</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td><i class="bi bi-question-lg"></i></td>
     <td><i class="bi bi-question-lg"></i></td>
     <td><i class="bi bi-x-lg"></i></td>
+    <td><span class="badge text-bg-primary">ME</span></td>
   </tr>
   <tr>
     <td>Custom Processor Design/FPGA</td>
@@ -219,7 +220,6 @@ Historically, the open source software community rightfully was extremely wary o
     <td></td>
     <td><i class="bi bi-check-lg"></i></td>
     <td><i class="bi bi-question-lg"></i></td>
-    <td><i class="bi bi-x-lg"></i></td>
     <td><i class="bi bi-x-lg"></i></td>
     <td><span class="badge text-bg-primary">ME</span></td>
   </tr>
@@ -238,7 +238,7 @@ Historically, the open source software community rightfully was extremely wary o
 	<tbody>
 		<tr>
 			<td><span class="badge text-bg-primary">ME</span></td>
-			<td>Memory encryption. Bus snooping may reveal access patterns.</td>
+			<td>Memory encryption. Bus snooping may reveal access patterns unless ORAM is used.</td>
 		</tr>
 		<tr>
 			<td><span class="badge text-bg-secondary">IMP</span></td>
