--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Historically, the open source software community rightfully was extremely wary o
     <td>x86</td>
     <td></td>
     <td>
-		All-in-one hardware extension for VM enclaves. Added instructions to the ISA (SEAMCALL, <em>etc.</em>). Total memory encryption (TKTME) is used with different keys for VM Enclaves.
+		All-in-one hardware extension for VM enclaves protected against an untrusted hypervisor and environment. Added instructions to the ISA (SEAMCALL, <em>etc.</em>). Total memory encryption (TKTME) is used with different keys for VM Enclaves.
 	</td>
     <td>
 		Hardware generates reports. Remote attestation uses Intel-provided provisioning and quoting enclaves.
@@ -148,9 +148,18 @@ Historically, the open source software community rightfully was extremely wary o
 		<a href="https://dl.acm.org/doi/abs/10.1145/1352592.1352625">Flicker</a>,
 		<a href="https://ieeexplore.ieee.org/abstract/document/5504713">TrustVisor</a>
 	</td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td>
+		All-in-one hardware extension for VM enclaves protected against an untrusted hypervisor and environment. Adds a security coprocessor and additional ISA instructions for managing VM memory. MMU is extended with memory encryption engine which uses per-VM keys. Register states are encrypted on context switches. Integrity is enforced through a reverse map table.
+	</td>
+    <td>
+		Coprocessor generates signed report. Root of trust system used with AMD root CA at the beginning of the chain.
+	</td>
+    <td>
+		<ul>
+			<li>proprietary hardware stack, new microcode</li>
+			<li>closed source coprocessor firmware</li>
+		</ul>
+	</td>
     <td><i class="bi bi-check-lg"></i></td>
     <td><i class="bi bi-check-lg"></i></td>
     <td><i class="bi bi-x-lg"></i></td>
@@ -159,9 +168,12 @@ Historically, the open source software community rightfully was extremely wary o
   <tr>
     <td>ARM TrustZone + Bus Security</td>
     <td>ARMv7, ARMv8</td>
-    <td></td>
     <td>
-		Hardware extension dividing processor into two security worlds. Additional EL3 privilege level added, and SMC instruction to call into EL3 mode. Programmable EL3 firmware and Secure world OS used to create enclaves/TEEs. Vendors must implement bus security, <em>e.g.</em> a TrustZone Address Space Controller (TZASC).
+		<a href="https://dl.acm.org/doi/abs/10.1145/3291047">Pinto Survey</a>,
+		<a href="https://developer.arm.com/documentation/PRD29-GENC-009492/c">ARM Whitepaper</a>
+	</td>
+    <td>
+		Hardware extension dividing processor into two security worlds. Additional EL3 privilege level added, and SMC instruction to call into EL3 mode. Programmable EL3 firmware (a.k.a. the Secure Monitor) and Secure world OS used to create enclaves/TEEs. Vendors must implement bus security, <em>e.g.</em> a TrustZone Address Space Controller (TZASC).
 	</td>
     <td>
 		Some research efforts have implemented remote attestation.
@@ -181,10 +193,22 @@ Historically, the open source software community rightfully was extremely wary o
   <tr>
     <td>ARM Confidential Compute Architecture (CCA)</td>
     <td>ARMv9</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td>
+		<a href="https://www.usenix.org/conference/osdi22/presentation/li">Li <em>et al.</em></a>
+	</td>
+    <td>
+		Hardware extension building on ARM TrustZone. Processor is further divided to add world-like realms. Programmable EL3 Secure Monitor context switches between the Normal world, Secure world, and Realm world. Realm world has a programmable (and verified) EL2 Realm Management Monitor (RMM) hypervisor to switch between realms. MMU is extended to support a Granule Partition Table (GPT) to protect physical memory.
+	</td>
+    <td>
+		No CCA specific mechanisms available yet. Likely implementations will attest Realm VM enclaves using a chain of trust from the Secure Monitor to RMM.
+	</td>
+    <td>
+		<ul>
+			<li>proprietary hardware stack</li>
+			<li>EL3 firmware (Formally Verified)</li>
+			<li>RMM (Formally Verified)</li>
+		</ul>
+	</td>
     <td><i class="bi bi-check-lg"></i></td>
     <td><i class="bi bi-check-lg"></i></td>
     <td><i class="bi bi-question-lg"></i></td>
